finished the logic to the game

--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="text-center">Trivia Game</h1>
+    <h1 class="text-center">Movie Trivia Game</h1>
 
 
 <div class="container">
     <div class="row">
         <div class="col-lg-12 bk">
-            <p class="text-center">You have <span class="timer"></span> seconds</p>
+            <p class="text-center countDown">You have <span class="timer"></span> seconds</p>
             <br>
-            <p class="text-center question">flkhgdsalkhfgkhdasgflhas</p>
+            <p class="text-center question"></p>
+            <div class="scoreBoard text-center"></div>
             <br>
             <p class="text-center" id="correctAnswer"></p>
             <div class="appendHere text-center">
                 <!-- buttons Here -->
             </div>
         </div>
+        <p><span id="countDownTillNext"></span></p>
     </div>
 
 </div>
