styled start screen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="text-center">Movie Trivia Game</h1>
+    <h1 class="text-center">
+        <img src="/images/f9329c9c-5094-47a5-b8c6-9ab317d91fe6.png" height="90px">
+    </h1>
 
 
 <div class="container">
@@ -26,6 +28,9 @@
             <p class="text-center" id="correctAnswer"></p>
             <div class="appendHere text-center">
                 <!-- buttons Here -->
+            <button class=" text-center removeStartButton startButton startButtonStyle">
+                <img class="imgStyle" src="/images/36315_1.png">
+            </button>
             </div>
         </div>
         <p><span id="countDownTillNext"></span></p>
