changed file route again

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="appendHere text-center">
                 <!-- buttons Here -->
             <button class=" text-center removeStartButton startButton startButtonStyle">
-                <img class="imgStyle" src="/images/36315_1.png">
+                <img class="imgStyle" src="images/36315_1.png">
             </button>
             </div>
         </div>
